--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Lista de Tarefas</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Sigmar&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Lilita+One&family=Sigmar&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="main.css">
 </head>
@@ -28,18 +26,24 @@
         </div>
     </form>
 
+    <div class="container-lista">
+        <h2>Tarefas</h2>
     <ul class="lista-de-tarefas">
-        <div class="container-lista">
-            <li id="header-lista">
-                <span>Código</span>
-                <span>Tarefa</span>
-            </li>
             <li>
-                <span>1</span>
+                <img src="./images/check.svg" alt="">
                 <span>Teste</span>
             </li>
-        </div>
-    </ul>
+            <li>
+                <img src="./images/check.svg" alt="">
+                <span>Teste</span>
+            </li>
+            <li>
+                <img src="./images/check.svg" alt="">
+                <span>Teste</span>
+            </li>
+        </ul>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="main.js"></script>
 </body>
 
