modificado nome do botão para Cadastrar

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <form>
         <div class="container-form">
             <input type="text" required placeholder="Nome da Tarefa" id="input-tarefa">
-            <button type="submit" id="button-add-tarefa">Adicionar</button>
+            <button type="submit" id="button-add-tarefa">Cadastrar</button>
         </div>
     </form>
 
